# tinydns

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yml
migrations/: 20250225161536_user_dns_records.sql
src/: main.rs
src/database/: database.rs  mod.rs  record_query.rs
src/nameserver/: mod.rs  nameserver.rs
src/protocol/: answer.rs  mod.rs  serve.rs  server_config.rs  util.rs
src/protocol/packet/: builder.rs  flags.rs  header.rs  mod.rs  packet.rs  question.rs  record_type.rs  resource_record.rs
src/protocol/resolver/: mod.rs
src/resolver/: resolver.rs
src/server/: handle_packet.rs  mod.rs  serve.rs  server_config.rs
