[package]
name = "tinydns"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
log = "0.4.26"
log4rs = "1.3.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "net"] }
